src/test/deca/context/valid/class_setter_init.deca
// Test a class with an initialized constructor

class Person {
    float intelligence;
    int age;
    void init(float intelligence, int age) {
        this.intelligence = intelligence;
        this.age = age;
    }
}

{
    Person person = new Person();
    person.init(99.9, 3);
}

