src/test/deca/context/invalid/print_class.deca
// Test la règle 3.30

class A {

}

{
    A a = new A();
    print(a);
}

// Resultat:
//# TODOTEST 
